<resources>
    <string name="app_name">Popular Movies, Stage 1-2</string>

    <string name="action_settings">Settings</string>
    <string name="str_title_movie_example">Mission Impossible</string>
    <string name="str_supporttitle_example">Drew Pearce, Will Staples</string>
    <string name="title_activity_details_screen">DetailsScreen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings_activitry">SettingsActivitry</string>
    <string name="orderByTop">Order by Top</string>
    <string name="orderByPopular">Order by Popular</string>
    <string name="pref_description_orderByPopular">Most popular Films</string>
    <string name="pref_description_orderByTop">Top Movies</string>


    <!-- String for Settings Activity -->
    <string name="pref_popular">Most Popular</string>
    <string name="pref_rated">Highest-rated</string>
    <string name="favorites">Favorites</string>

    <string name="pref_sort_title">Sorting Movies</string>
    <string name="pref_sort_key" translatable="false">sortKey</string>
    <string name="relasedate">2015</string>
    <string name="raiting">8.1/10</string>
    <string name="plain_text_for_preview">Wow! This looks amazing</string>
    <string name="author">Adonis Arifi</string>
    <string name="marksAsFavorite">MARK AS FAVORITE</string>
    <string name="removeFromFavorite">REMOVE</string>
    <string name="favorite_added_message">Added to favorites: </string>
    <string name="favorite_remove_message">Remove from favorites: </string>
    <string name="text_reviews">Reviews:</string>
    <string name="text_trailers">Trailers:</string>
    <string name="action_share">Share</string>
    <string-array name="pref_sort_values">
        <item>@string/pref_popular</item>
        <item>@string/pref_rated</item>
        <item>@string/favorites</item>

    </string-array>
    <string-array name="pref_sort_options">
        <item>@string/pref_popular</item>
        <item>@string/pref_rated</item>
        <item>@string/favorites</item>
    </string-array>
</resources>
