<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="150dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textView_details_height">

                    <ImageView
                        android:id="@+id/image_backdrop_path"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY" />

                    <TextView
                        android:id="@+id/detail_title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/textView_details_height"
                        android:background="#a3040304"
                        android:elevation="@dimen/elevation_4dp"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center_vertical"
                        android:maxLines="2"
                        android:paddingLeft="@dimen/details_textView_paddingLeftRight"
                        android:paddingRight="@dimen/details_textView_paddingLeftRight"
                        android:textColor="@color/white"
                        android:textSize="@dimen/details_textViewtitle_size"
                        tools:text="@string/str_title_movie_example" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:orientation="horizontal"
                    android:paddingTop="@dimen/padding_2dp">

                    <ImageView
                        android:id="@+id/item_movie_cover"
                        android:layout_width="@dimen/details_imagecover_width"
                        android:layout_height="@dimen/details_imagecover_height"
                        android:layout_below="@+id/activity_detail_title"
                        android:scaleType="fitXY"
                        android:src="@drawable/moviesstage1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_collapseMode="parallax">

                        <TextView
                            android:id="@+id/txtrelasedate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/details_layout_dateraiting_marginLeft"
                            android:paddingRight="@dimen/textView_date_rait_paddingRigt"
                            android:paddingTop="@dimen/details_dateraiting_paddingTop"
                            android:text="@string/relasedate"
                            android:textSize="@dimen/details_dateraiting_textSize" />

                        <TextView
                            android:id="@+id/voteAvarage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/details_layout_dateraiting_marginLeft"
                            android:paddingRight="@dimen/textView_date_rait_paddingRigt"
                            android:paddingTop="@dimen/details_dateraiting_paddingTop"
                            android:text="@string/raiting"
                            android:textSize="@dimen/details_dateraiting_textSize" />
                        <Button
                            android:id="@+id/btn_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/marksAsFavorite"/>
                    </LinearLayout>


                </LinearLayout>


            </LinearLayout>
        </android.support.design.widget.CollapsingToolbarLayout>


        <LinearLayout
            android:id="@+id/card_view_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_details_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Details:"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/textview_layout_margin_10dp"
                    android:fontFamily="sans-serif"
                    android:paddingRight="@dimen/textView_date_rait_paddingRigt"
                    android:paddingTop="@dimen/details_textView_paddingTop"
                    android:textSize="@dimen/details_dateraiting_textSize" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"

                    android:layout_alignParentBottom="true"
                    android:layout_below="@+id/item_review_photo"
                    android:background="?android:attr/listDivider" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_view_videos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <LinearLayout
                android:id="@+id/linearLayout_videos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
              >

                <TextView
                    android:id="@+id/textView_videos_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Video:"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerView_video"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:overScrollMode="never" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/card_view_reviews"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout_review"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_reviews_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reviews:"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                   >

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView_review"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:elevation="5dp"
                        android:isScrollContainer="false"
                        android:overScrollMode="never" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>